--- a/appliaction/study/view/teacher/homework/lessons.html
+++ b/appliaction/study/view/teacher/homework/lessons.html
@@ -8,105 +8,92 @@
         <link rel="stylesheet" href="/ststic/study/css/base.css">
         <link rel="stylesheet" href="/ststic/study/css/center.css">
         <link rel="stylesheet" href="/ststic/study/css/u_mob.css"> 
+        
         <script type="text/javascript" src="/ststic/study/js/jquery.min.js"></script>
         <script type="text/javascript" src="/ststic/study/js/moment.js"></script>
         <script type="text/javascript" src="/ststic/study/js/bootstrap-datetimepicker.js"></script>
         <script type="text/javascript" src="/ststic/study/js/menu.js"></script>
-        
+
         <script type="text/javascript" src="/ststic/study/js/common.js"></script>
         <script type="text/javascript" src="/vendor/layer/layer.js"></script>
 
+
    </head>
 <body bgcolor="f1f1f1" >
-	
+    
         <div class="center">
-        	{include public/left_menus}
+            {include public/left_menus}
         
-        <div class="classroom_right ">
-        		<h3 class="ks_zy" >课程和作业安排</h3>
-        	<div class="t_cr_left t_kczy fl">
-            	<p class="onli">课程安排</p>
-            	<ul class="clearfix div_ul2">
-                	 <li {if ACTION == 'lessons'}class="on"{/if}><a href="{F:url('lessons')}" class="kcap">课程安排</a></li>
-                    <li {if ACTION == 'classwork'}class="on"{/if}><a href="{F:url('classwork')}" class="zyap">作业安排</a></li>
-                    <li {if ACTION == 'my_up_classwork'}class="on"{/if}><a href="{F:url('my_up_classwork')}" class="xzzy">我上传的作业</a></li>
+        <div class="classroom_right teacher_right_t">
+                <h3 class="ks_zy" >课程和作业安排</h3>
+            <div class="t_cr_left t_kczy fl">
+                <p class="onli">课程安排</p>
+                <ul class="clearfix div_ul2">
+                    <li {if !$type || $type == 1}class="on"{/if}><a href="{F:url('lessons',array('type'=>1))}" class="kcap">课程安排</a></li>
+                    <li {if $type == 2}class="on"{/if}><a href="{F:url('lessons',array('type'=>2))}" class="zyap">作业安排</a></li>
+                    <li><a href="t_zxzy.html" class="xzzy">下载作业</a></li>
+                    <a href="javascript:;" class="btn_fb" style="color:#fff">发布安排</a>
                 </ul>
             </div>
   <script>
     $(document).ready(function(){
-  $(".onli").click(function(){
-  $(".t_cr_left ul").slideToggle();
-  });
+    $(".onli").click(function(){
+      $(".t_cr_left ul").slideToggle();
+      });
    });
 
     </script>
 
-     	<div class="t_cr_right fr">
-            	<ul class="kczy">
-                	<li>
-                    	<p class="name"><a href="#">雅思冲刺7.5分课程</a></p>
-                        <p class="zy_cont">本套题针对出国留学的学生准备，其中包括选这题和填空题，最后一页附上答案，请严格答题</p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="time"><span>时间：2017/08/02<em></em> 上午9点-11点 </span><span>教师：大卫 </span></p>
+        <div class="t_cr_right fr">
+                <ul class="kczy">
+                {loop $list $value}
+                    <li>
+                        <p class="name"><a href="javascript:;">{$value['goods']['title']}</a></p>
+                        <p class="zy_cont">{$value['content']}</p>
+                        {loop $value['annex'] $v}
+                        <p class="wenjian"><a href="{$v['url']}" target="_blank">{$v['name']}</a></p>
+                        {/loop}
+                        <p class="time"><span>时间：{F:date('Y/m/d H:i:s',$value['created'])}</span><span>教师：{$value['teacher']['real_name']} </span></p>
                     </li>
-                	<li>
-                    	<p class="name"><a href="#">雅思冲刺7.5分课程</a></p>
-                        <p class="zy_cont">本套题针对出国留学的学生准备，其中包括选这题和填空题，最后一页附上答案，请严格答题</p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="time"><span>时间：2017/08/02<em></em> 上午9点-11点 </span><span>教师：大卫 </span></p>
-                    </li>
-                	<li>
-                    	<p class="name"><a href="#">雅思冲刺7.5分课程</a></p>
-                        <p class="zy_cont">本套题针对出国留学的学生准备，其中包括选这题和填空题，最后一页附上答案，请严格答题</p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="time"><span>时间：2017/08/02<em></em> 上午9点-11点 </span><span>教师：大卫 </span></p>
-                    </li>
-                	<li>
-                    	<p class="name"><a href="#">雅思冲刺7.5分课程</a></p>
-                        <p class="zy_cont">本套题针对出国留学的学生准备，其中包括选这题和填空题，最后一页附上答案，请严格答题</p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="wenjian"><a href="#">课程安排01.pdf</a></p>
-                        <p class="time"><span>时间：2017/08/02<em></em> 上午9点-11点 </span><span>教师：大卫 </span></p>
-                    </li>
-                
-                
+                {/loop}
                 </ul>
             
             </div>
-            
-        
+
         </div>
    </div>
 
-      	<div class="xiugais  clearfix">
-        	<div class="xiugai_box">
-            	<div class="close"><a href="#" class="closebox"></a></div>
-                <b>发布课程安排</b>
-                <p><span>课程名称</span><input type="text"  placeholder="请输入"/></p>
-                <p><span>描述</span><textarea name="" cols="" rows=""></textarea></p>
-            	<p class="iDate date"><span>日期</span><input type="text" placeholder="结束时间"  ><button type="button" class="addOn"></button></p>
-            	<p><span>附件</span> <a href="#" class="btn_sc"><input type="file" />立即上传</a></p>
-                <a class="btn_xg" href="#">立即上传</a>
-            </div>
+        <div class="xiugais  clearfix">
+            <form class="form-horizontal" action="">
+                <input  type="hidden" value="" name="annex" />
+                <div class="xiugai_box">
+                    <div class="close"><a href="javascript:;" class="closebox"></a></div>
+                    <b>发布课程安排</b>
+                    <p><span>课程名称</span>
+                        <select style="width: 70%;height:30px;padding: 5px;border: 1px solid #dcdcdc;" name="goods_id">
+                            <option value="">选择课程</option>
+                            {loop $courseList $value}
+                            <option value="{$value['id']}">{$value['title']}</option>
+                            {/loop}
+                        </select>
+                    </p>
+                    <p><span>描述</span><textarea name="content" cols="" rows=""></textarea></p>
+                    <p class="iDate date"><span>日期</span><input type="text" placeholder="课程开始时间" name="start_time"><button type="button" class="addOn"></button></p>
+                    <p><span>附件</span> <a href="javascript:;" class="btn_sc"><input type="file" name="tmp_annex" style="width: 100%" />立即上传</a></p>
+                    <p class="wenjian">附件个数：<label>0</label></p>
+                    <a class="btn_xg btn-comply" href="javascript:;">立即上传</a>
+                </div>
+            </form>
         </div>  
 </body>
 <script>
-  $(".btn_fb").click(function(){
-	  $(".xiugais").slideToggle();
+$(".btn_fb").click(function(){
+  $(".xiugais").slideToggle();
+})
+$(".closebox ").click(function(){
+      $(".xiugais").css("display","none");
   })
-  $(".closebox ").click(function(){
-		  $(".xiugais").css("display","none");
-	  })
 
-</script>
-<script type="text/javascript">
 $(document).ready(function(){
     // date time picker
     if($(".iDate.date").length>0){
@@ -116,6 +103,44 @@ $(document).ready(function(){
             dayViewHeaderFormat:"YYYY年 MMMM"
         });
     }
+})
+
+
+/** 上传附件 */
+$("input[name='tmp_annex']").change(function(e){
+  var _this = this;
+  var files = e.target.files || e.dataTransfer.files;
+  var filesNum = Math.max(parseInt($('.wenjian').find('label').text()),0) + 1;
+  var formData = new FormData();
+  formData.append('file', files[0]);
+  formData.append('path', 'test');
+
+  //ajax异步上传  
+  $.ajax({  
+      url: '/common/upload/up_file',  
+      type: 'POST',  
+      data: formData,
+      dataType: 'json',  
+      contentType: false, //必须false才会自动加上正确的Content-Type  
+      processData: false,  //必须false才会避开jQuery对 formdata 的默认处理  
+      success: function(result){
+          if(!result.status){
+          }else{
+           
+            $('.wenjian').find('label').text(filesNum);
+            var val = $('input[name="annex"]').val();
+            if(val){
+               val =val+','+result.data.name[0]+':::'+files[0]['name'];
+            }else{
+               val = result.data.name[0]+':::'+files[0]['name'];
+            }
+           
+            $('input[name="annex"]').val(val);
+          }
+          return layer.msg(result.msg);               
+      },  
+  });  
+
 })
 </script>
 
