--- a/appliaction/study/view/teacher/message/detail.html
+++ b/appliaction/study/view/teacher/message/detail.html
@@ -25,34 +25,46 @@
             <div class="t_news">
             	<div class="t_news_left  fl">
                 	<ul class=" clearfix">
-                    	<li {if $sign == 1}class="on"{/if}><a href="{F:url('index',array('sign'=>1))}">未读消息（10）</a></li>
-                        <li {if $sign == 2 || !$sign}class="on"{/if}><a href="{F:url('index',array('sign'=>2))}">所有消息（22）</a></li>
-                        <li {if $sign == 3}class="on"{/if}><a href="{F:url('index',array('sign'=>3))}">重要消息（22）</a></li>
-                        <li {if $sign == 4}class="on"{/if}><a href="{F:url('index',array('sign'=>4))}">发送（2）</a></li>
+                    	<li {if $sign == 1}class="on"{/if}><a href="{F:url('index',array('sign'=>1))}">未读消息（{$total['not_reader_total']}）</a></li>
+                        <li {if $sign == 2 || !$sign}class="on"{/if}><a href="{F:url('index',array('sign'=>2))}">所有消息（{$total['total']}）</a></li>
+                        <li {if $sign == 3}class="on"{/if}><a href="{F:url('index',array('sign'=>3))}">重要消息（{$total['important_total']}）</a></li>
+                        <li {if $sign == 4}class="on"{/if}><a href="{F:url('index',array('sign'=>4))}">发送（{$total['send_total']}）</a></li>
                     </ul>
-                    <a class="btn_write clearfix"  href="t_write_news.html">写消息</a>
+                    <a class="btn_write clearfix"  href="{F:url('send')}">写消息</a>
                 </div>
                 <div class="t_news_right fr demo1">
                 	<div class="t_news_cont">
-                    	<div class="biaoji"><a href="#" class="zhongyao">标记为重要消息</a><a href="#" class="del">删除</a></div>
+                    	<div class="biaoji">
+                            {if $data['uid'] != $this->uid}
+                                {if $data['to_uid_important']}
+                                    <a href="javascript:;" class="zhongyao btn-ajax-post" data-id="{$data['id']}"  config-href="{F:url('important')}" config-reload="1">取消标记</a>
+                                {else}
+                                     <a href="javascript:;" class="zhongyao btn-ajax-post" data-id="{$data['id']}"  config-href="{F:url('important')}" config-reload="1">标记重要</a>
+                                {/if}
+                            {/if}
+                            <a href="javascript:;" class="del btn-ajax-post" data-id="{$data['id']}" config-tips="确定删除该邮件" config-href="{F:url('del')}" config-true-url="{F:url('index')}">删除</a>
+                        </div>
                         <div class="fajianren">
-                        	<b>今天作业比较难</b>
-                        	<p>发件人：<span style="color:#0a5fa4">张三</span></p>
-                        	<p>时&nbsp;&nbsp;&nbsp;间：<span>017/07/19（周四）<i>上午9点29</i></span></p>
+                        	<b>{$data['title']}</b>
+                        	<p>发件人：<span style="color:#0a5fa4">{$data['user']['real_name']}</span></p>
+                            <p>收件人：<span style="color:#0a5fa4">{$data['toUser']['real_name']}</span></p>
+                        	<p>时&nbsp;&nbsp;&nbsp;间：<span>{F:date('Y/m/d H:i:s',$data['created'])}</span></p>
                         </div>
                     	<div class="newx_cont"><!-- 内容-->
-                        	<p>今天的作业比较难，能不能布置简单一点的，或者讲仔细一下</p>
+                        	<p>{$data['content']}</p>
                         </div>
+                        {if $data['annex']}
                         <div class="fujian"><!-- 附件-->
-                        	<p>附件<span style="color:#0a5fa4">1</span>个</p>
-                            <div class="wenjian"><a href="#">课程安排01.pdf</a></div>
-                            <div class="wenjian"><a href="#">课程安排01.pdf</a></div>
-                            <div class="wenjian"><a href="#">课程安排01.pdf</a></div>
+                        	<p>附件<span style="color:#0a5fa4">{$data['annex_total']}</span>个</p>
+                            {loop $data['annex'] $value}
+                            <div class="wenjian"><a href="{$value['url']}" target="_blank">{$value['name']}</a></div>
+                            {/loop}
                         </div>
+                        {/if}
                         <div class="t_pp">
-                        	<p class="t_huifu">我：这位同学，很不错，敢于说实话，下次会注意</P>
-                            <p><b>回复</b><a href="#" class="add_f">添加附件</a><textarea name="" cols="" rows="">输入您要回复的内容</textarea></p>
-                            <a href="#" class="btn_huifu">回复</a>
+                        	<!-- <p class="t_huifu">我：这位同学，很不错，敢于说实话，下次会注意</P>
+                                                        <p><b>回复</b><a href="#" class="add_f">添加附件</a><textarea name="" cols="" rows="">输入您要回复的内容</textarea></p> -->
+                            <a href="{F:url('reply',array('id'=>$data['id']))}" class="btn_huifu">回复</a>
                         </div>
                         
                     </div>
