--- a/appliaction/study/view/user/message/reply.html
+++ b/appliaction/study/view/user/message/reply.html
@@ -3,7 +3,7 @@
 <html>
    <head>
     <title>教师中心-发送信息</title>
-  	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="charset=utf-8" />
     <link rel="stylesheet" href="/ststic/study/css/base.css">
     <link rel="stylesheet" href="/ststic/study/css/center.css">
@@ -17,15 +17,15 @@
     <script type="text/javascript" src="/vendor/layer/layer.js"></script>
    </head>
 <body bgcolor="f1f1f1" >
-	
+    
         <div class="center">
-  	    {include public/left_menus}
+        {include public/left_menus}
         <div class="teacher_right teacher_right_t">
-        	<h3 class="my_news cl">我的消息</h3>
+            <h3 class="my_news cl">我的消息</h3>
             <div class="t_news">
-            	<div class="t_news_left  fl">
-                	<ul class=" clearfix">
-                    	<li {if $sign == 1}class="on"{/if}><a href="{F:url('index',array('sign'=>1))}">未读消息（{$total['not_reader_total']}）</a></li>
+                <div class="t_news_left  fl">
+                    <ul class=" clearfix">
+                        <li {if $sign == 1}class="on"{/if}><a href="{F:url('index',array('sign'=>1))}">未读消息（{$total['not_reader_total']}）</a></li>
                       <li {if $sign == 2 || !$sign}class="on"{/if}><a href="{F:url('index',array('sign'=>2))}">所有消息（{$total['total']}）</a></li>
                       <li {if $sign == 3}class="on"{/if}><a href="{F:url('index',array('sign'=>3))}">重要消息（{$total['important_total']}）</a></li>
                       <li {if $sign == 4}class="on"{/if}><a href="{F:url('index',array('sign'=>4))}">发送（{$total['send_total']}）</a></li>
@@ -33,20 +33,20 @@
                     <a class="btn_write clearfix"  href="{F:url('send')}">写消息</a>
                 </div>
                 <div class="t_news_right fr demo1">
-                	<div class="t_news_cont">
-                    	<div class="write_news">
-                        <form class="form-horizontal"> 
-                          <input  type="hidden" value="" name="to_uid" />
+                    <div class="t_news_cont">
+                        <div class="write_news">
+                        <form class="form-horizontal" action="{F:url('send')}"> 
+                          <input  type="hidden" value="{$data['uid']}" name="to_uid" />
                           <input  type="hidden" value="" name="annex" />
-                        	<div><span>收件人</span>
-                                <input  type="text" autocomplete="off" class="search-keyword" id="search-keyword" value="" />
+                            <div><span>收件人</span>
+                                <input  type="text" autocomplete="off" class="search-keyword" id="search-keyword" value="{$data['user']['real_name']}" />
                                 <ul id="hotwords" class="hotwords" style="display:none">
                                   {loop $userList $value}
                                     <li data-id="{$value['id']}"><a href="javascript:;"><h1>{$value['real_name']}</h1></a></li>
                                   {/loop}
                                 </ul>
                               </div>
-                              <div><span>标题</span><input type="text" class="input" name="title" /></div>
+                              <div><span>标题</span><input type="text" class="input" name="title" value="回复：{$data['title']}" /></div>
                               <div>
                                 <a href="javascript:;" class="a-upload"> 
                                   添加附件
@@ -54,7 +54,10 @@
                                 </a>
 
                               </div>
-                              <div class="textarea"><span>正文</span><textarea name="content" cols="" rows="" placeholder="输入您要回复的内容"></textarea></div>
+                              <div class="textarea"><span>正文</span>
+                                <textarea name="content" cols="" rows="" placeholder="输入您要回复的内容">--------原文件内容--------{F:PHP_EOL}{F:PHP_EOL}{$data['content']}{F:PHP_EOL}{F:PHP_EOL}--------回复内容--------{F:PHP_EOL}
+                                </textarea>
+                              </div>
                               <a href="javascript:;" class="btn_huifu btn-comply" config-true-url="{F:url('index',array('sign'=>4))}">发送</a>
                           </div>
                         </form>
