--- a/appliaction/study/view/user/message/send.html
+++ b/appliaction/study/view/user/message/send.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-    <title>学生门户-发送信息</title>
+    <title>教师中心-发送信息</title>
   	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="charset=utf-8" />
     <link rel="stylesheet" href="/ststic/study/css/base.css">
@@ -25,31 +25,39 @@
             <div class="t_news">
             	<div class="t_news_left  fl">
                 	<ul class=" clearfix">
-                    	<li {if $sign == 1}class="on"{/if}><a href="{F:url('index',array('sign'=>1))}">未读消息（10）</a></li>
-                      <li {if $sign == 2 || !$sign}class="on"{/if}><a href="{F:url('index',array('sign'=>2))}">所有消息（22）</a></li>
-                      <li {if $sign == 3}class="on"{/if}><a href="{F:url('index',array('sign'=>3))}">重要消息（22）</a></li>
-                      <li {if $sign == 4}class="on"{/if}><a href="{F:url('index',array('sign'=>4))}">发送（2）</a></li>
+                    	<li {if $sign == 1}class="on"{/if}><a href="{F:url('index',array('sign'=>1))}">未读消息（{$total['not_reader_total']}）</a></li>
+                      <li {if $sign == 2 || !$sign}class="on"{/if}><a href="{F:url('index',array('sign'=>2))}">所有消息（{$total['total']}）</a></li>
+                      <li {if $sign == 3}class="on"{/if}><a href="{F:url('index',array('sign'=>3))}">重要消息（{$total['important_total']}）</a></li>
+                      <li {if $sign == 4}class="on"{/if}><a href="{F:url('index',array('sign'=>4))}">发送（{$total['send_total']}）</a></li>
                     </ul>
-                     <a class="btn_write"  href="t_write_news.html">写消息</a>
+                    <a class="btn_write clearfix"  href="{F:url('send')}">写消息</a>
                 </div>
                 <div class="t_news_right fr demo1">
                 	<div class="t_news_cont">
                     	<div class="write_news">
+                        <form class="form-horizontal"> 
+                          <input  type="hidden" value="" name="to_uid" />
+                          <input  type="hidden" value="" name="annex" />
                         	<div><span>收件人</span>
-                              <input  type="text" autocomplete="off" class="search-keyword" id="search-keyword" value=""  disabled />
-                             <!--  <ul id="hotwords" class="hotwords" style="display:none">
-                                 <li><a href='#'><h1>张三</h1></a></li>
-                                 <li><a href='#'><h1>李四</h1></a></li>
-                                 <li><a href='#'><h1>王二</h1></a></li>
-                                 <li><a href='#'><h1>样</h1></a></li>
-                              </ul> -->
-                            </div>
-                            <div><span>标题</span><input type="text" class="input" name="title" /></div>
-                            <div><a href="javascript:;" class="a-upload"> <input type="file" name="" id="">添加附件</a>
-                            <p class="wenjian"><a href="#">课程安排01.pdf<i>√</i></a></p></div>
-                            <div class="textarea"><span>正文</span><textarea name="" cols="" rows="">输入您要回复的内容</textarea></div>
-                            <a href="#" class="btn_huifu">发送</a>
-                        </div>
+                                <input  type="text" autocomplete="off" class="search-keyword" id="search-keyword" value="" />
+                                <ul id="hotwords" class="hotwords" style="display:none">
+                                  {loop $userList $value}
+                                    <li data-id="{$value['id']}"><a href="javascript:;"><h1>{$value['real_name']}</h1></a></li>
+                                  {/loop}
+                                </ul>
+                              </div>
+                              <div><span>标题</span><input type="text" class="input" name="title" /></div>
+                              <div>
+                                <a href="javascript:;" class="a-upload"> 
+                                  添加附件
+                                  <input type="file" name="tmp_annex">
+                                </a>
+
+                              </div>
+                              <div class="textarea"><span>正文</span><textarea name="content" cols="" rows="" placeholder="输入您要回复的内容"></textarea></div>
+                              <a href="javascript:;" class="btn_huifu btn-comply" config-true-url="{F:url('index',array('sign'=>4))}">发送</a>
+                          </div>
+                        </form>
                     </div>
                 
                 </div>
@@ -59,11 +67,54 @@
         
 </body>
 <script type="text/javascript">
-$(function(){
-  $('.search-keyword').click(function(){
-    console.log(11111);
-    $('.hotwords').css('display',''); 
-  })
+/** 显示下拉 */
+$('#search-keyword').click(function(){
+  $('.hotwords').css('display',''); 
+})
+
+/** 选择姓名 */
+$(".hotwords li").click(function(){
+  var to = $(this).attr('data-id');
+  var text =$(this).find('h1').text();
+  $("input[name='to_uid']").val(to);
+  $('.hotwords').css('display','none');
+  $('.search-keyword').val(text); 
 });
+
+/** 上传附件 */
+$("input[name='tmp_annex']").change(function(e){
+  var _this = this;
+  var files = e.target.files || e.dataTransfer.files;
+  var html = '<p class="wenjian"><a href="javascript:;">'+files[0].name+'</a><i>√</i></p>';
+  var formData = new FormData();
+  formData.append('file', files[0]);
+  formData.append('path', 'test');
+  //ajax异步上传  
+  $.ajax({  
+      url: '/common/upload/up_file',  
+      type: 'POST',  
+      data: formData,
+      dataType: 'json',  
+      contentType: false, //必须false才会自动加上正确的Content-Type  
+      processData: false,  //必须false才会避开jQuery对 formdata 的默认处理  
+      success: function(result){
+          if(!result.status){
+          }else{
+            $(_this).parent().after(html);
+            var val = $('input[name="annex"]').val();
+           if(val){
+               val =val+','+result.data.name[0]+':::'+files[0]['name'];
+            }else{
+               val = result.data.name[0]+':::'+files[0]['name'];
+            }
+           
+            $('input[name="annex"]').val(val);
+          }
+          return layer.msg(result.msg);               
+      },  
+  });  
+
+})
+
 </script>
 </html>
