--- a/appliaction/study/view/teacher/classroom/vip.html
+++ b/appliaction/study/view/teacher/classroom/vip.html
@@ -3,7 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
    <head>
-        <title>学生门户-进入教室</title>
+        <title>教师中心-进入教室</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type" content="charset=utf-8" />
         <link rel="stylesheet" href="/ststic/study/css/base.css">
         <link rel="stylesheet" href="/ststic/study/css/center.css">
         <link rel="stylesheet" href="/ststic/study/css/u_mob.css"> 
@@ -20,7 +22,7 @@
 <body bgcolor="f1f1f1" >
 	
         <div class="center">
-        	<div id="navbar"><span><i class="ico2"></i>教师中心-评论管理</span><a href="#" class="menubtn"></a>
+        	<div id="navbar"><span><i class="ico2"></i>教师中心-进入教室</span><a href="#" class="menubtn"></a>
         {include public/left_menus}
     </div>
         
