--- a/appliaction/blog/view/note/index/index.html
+++ b/appliaction/blog/view/note/index/index.html
@@ -9,54 +9,54 @@
 *{margin:0px;padding:0px;list-style-type:none;}
 a,img{border:0;}
 body{margin:0px auto;width:800px;font-family:arial,sans-serif;font-size:100%;margin:3em;background:#666;color:#fff;}
+.menus li{ text-align: center; float: left; cursor: pointer; }
+.note{ width: 1200px; margin:0 auto;  background: red;}
 </style>
 
 <!--必要样式-->
-<link href="{F:getConfig('config','ststic')}/blog/css/note.css" rel="stylesheet" type="text/css">
+<!-- <link href="{F:getConfig('config','ststic')}/blog/css/note.css" rel="stylesheet" type="text/css"> -->
 
-<link href="http://fonts.googleapis.com/css?family=Reenie+Beanie:regular" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="{F:getConfig('config','vendor')}/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="{F:getConfig('config','vendor')}/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{F:getConfig('config','vendor')}/pace/themes/blue/pace-theme-minimal.css" />
+<link rel="stylesheet" href="{F:getConfig('config','ststic')}/blog/css/common.css" />
+<link rel="stylesheet" href="{F:getConfig('config','ststic')}/blog/css/css.css" />
 
 </head>
 
 <body>
 
+<div class="menus">
+	<ul>
+		<li draggable="true" ><img src="{F:denha\Start::$config['ststic']}/blog/images/files.png" width="80" style="clear: both;"><br/>xxxx</li>
+	</ul>
+</div>
+<div class="clearfix"></div>
 <div class="note">
 	<ul>
-		<li>
-			<a href="http://www.17sucai.com/">
-				<h2>Baici Liu:</h2>
-				<p>小米的饥饿营销真是太坑爹了！ball shit!</p>
-			</a>
+		<li draggable="true">
+			<h2>Baici Liu:</h2>
+			<p>小米的饥饿营销真是太坑爹了！ball shit!</p>
 		</li>
-		<li>
-			<a href="http://www.17sucai.com/">
-				<h2>Xiaoqiang Yan:</h2>
-				<p>最近怎么没有妹纸发帖呢?recommend!recommend!</p>
-			</a>
+		<li draggable="true" >
+			<h2>Xiaoqiang Yan:</h2>
+			<p>最近怎么没有妹纸发帖呢?recommend!recommend!</p>
 		</li>
-		<li>
-			<a href="http://www.17sucai.com/">
-				<h2>Pan Huang:</h2>
-				<p>好饿啊！求带！hungry！hungry！</p>
-			</a>
+		<li draggable="true" >
+			<h2>Pan Huang:</h2>
+			<p>好饿啊！求带！hungry！hungry！</p>
 		</li>
-		<li>
-			<a href="http://www.17sucai.com/">
-				<h2>Feng Deng:</h2>
-				<p>哎哟，那妹纸不错来着，看我去问个电话号码回来！come on!</p>
-			</a>
+		<li draggable="true" >
+			<h2>Feng Deng:</h2>
+			<p>哎哟，那妹纸不错来着，看我去问个电话号码回来！come on!</p>
 		</li>
-		<li>
-			<a href="http://www.17sucai.com/">
-				<h2>star 张:</h2>
-				<p>好好学习，天天向上！good good study!day day up!</p>
-			</a>
+		<li draggable="true" >
+			<h2>star 张:</h2>
+			<p>好好学习，天天向上！good good study!day day up!</p>
 		</li>
-		<li>
-			<a href="http://www.17sucai.com/">
-				<h2>某武林高手:</h2>
-				<p>低于25000/month的面试再也不去了，他grandma的！</p>
-			</a>
+		<li draggable="true" >
+			<h2>某武林高手:</h2>
+			<p>低于25000/month的面试再也不去了，他grandma的！</p>
 		</li>
 	</ul>
 </div>
