--- a/appliaction/admin/view/content/article_edit/edit_3.html
+++ b/appliaction/admin/view/content/article_edit/edit_3.html
@@ -150,7 +150,7 @@
 							<div class="col-sm-8">
 								{loop $other['featuredCopy'] $key $value}
 									<label class="checkbox-inline">
-										<input type="checkbox" class="checkbox" value="{$key}" name="info[characteristics][]" data-checked='{F:json_encode($characteristics)}'>{$value}
+										<input type="checkbox" class="checkbox" value="{$key}" name="info[characteristics][]" data-checked='{F:json_encode(explode(',',$data['characteristics']))}'>{$value}
 									</label>
 								{/loop}
 							</div>
