--- a/appliaction/study/view/user/calendar/index.html
+++ b/appliaction/study/view/user/calendar/index.html
@@ -68,7 +68,7 @@
                                 {if isset($list[$v])}
                                 <ul>
                                     {loop $list[$v] $vv}
-                                     <li class="{F:array_rand($other['background'])}" data-class="{$vv['goods']['title']}" data-time="{$vv['goods']['class_time']}" data-model="{$other['signCopy'][$vv['goods']['sign']]}" data-name="{$vv['teacher']['real_name']}" data-grade="{$vv['credit']}分" data-comment="{$vv['is_comment']}">{$vv['goods']['title']}</li>
+                                     <li class="{F:array_rand($other['background'])}" data-class="{$vv['goods']['title']}" data-time="{$vv['goods']['class_time']}" data-model="{$other['signCopy'][$vv['goods']['sign']]}" data-name="{$vv['teacher']['real_name']}" data-grade="{if $vv['credit']}{$vv['credit']}分{/if}" data-comment="{$vv['is_comment']}" data-order-sn="{$vv['order_sn']}" data-course-id="{$vv['id']}">{$vv['goods']['title']}</li>
                                     {/loop}
                                 </ul>
                                 {/if}
@@ -92,18 +92,22 @@
                 <li>方式：<span></span></li>
                 <li>学分：<span></span></li>
             </ul>
-            <button type="button" data-button="evaluate">评价</button>
+            <button type="button" data-button="evaluate" class="btn-comment" style="display: none;">评价</button>
         </div>
         <div id="evaluate-box">
             <div>
                 <img src="/ststic/study/images/calendar-evaluate.png">
-                <form>
+                <form class="form-horizontal" action="{F:url('add_comment')}">
                     <p>我要评价</p>
-                    <textarea placeholder="对老师课程还满意吗？"></textarea>
+                    <input type="hidden" value="" name="order_sn"></input>
+                    <input type="hidden" value="" name="course_id"></input>
+                    <input type="hidden" value="50" name="shipping_score"></input>
+                    <input type="hidden" value="50" name="teacher_score"></input>
+                    <textarea placeholder="对老师课程还满意吗？" name="content"></textarea>
                     <ul>
                         <li>
                             <span>课程安排</span>
-                            <div>
+                            <div data-type="1">
                                 <div>
                                     <img src="/ststic/study/images/star-y.png">
                                     <img src="/ststic/study/images/star-y.png">
@@ -121,7 +125,7 @@
                         </li>
                         <li>
                             <span>老师专业度</span>
-                            <div>
+                            <div data-type="2">
                                 <div>
                                     <img src="/ststic/study/images/star-y.png">
                                     <img src="/ststic/study/images/star-y.png">
@@ -138,7 +142,7 @@
                             <span>非常满意</span>
                         </li>
                     </ul>
-                    <button type="button">提交</button>
+                    <button type="button" class="btn-comply" config-true-url="{F:url('')}">提交</button>
                 </form>
                 <span></span>
             </div>
@@ -155,39 +159,53 @@
                                 var classHtml=$this.attr("data-class");
                                 if(classHtml==""){
                                     $dataLists.eq(i).parent("li").remove();
-                                    return;
                                 }
+
                                 $dataLists.eq(i).html(classHtml);
                             }else if(i===1){
                                 var timeHtml=$this.attr("data-time");
                                 if(timeHtml==""){
                                     $dataLists.eq(i).parent("li").remove();
-                                    return;
                                 }
+
                                 $dataLists.eq(i).html(timeHtml);
                             }else if(i===2){
                                 var nameHtml=$this.attr("data-name");
                                 if(nameHtml==""){
                                     $dataLists.eq(i).parent("li").remove();
-                                    return;
                                 }
+
                                 $dataLists.eq(i).html(nameHtml);
                             }else if(i===3){
                                 var modelHtml=$this.attr("data-model");
                                 if(modelHtml==""){
                                     $dataLists.eq(i).parent("li").remove();
-                                    return;
                                 }
+
                                 $dataLists.eq(i).html(modelHtml);
                             }else if(i===4){
                                 var gradeHtml=$this.attr("data-grade");
                                 if(gradeHtml==""){
                                     $dataLists.eq(i).parent("li").remove();
-                                    return;
                                 }
+
                                 $dataLists.eq(i).html(gradeHtml);
                             }
                         }
+
+                        var order_sn = $(this).attr('data-order-sn');
+                        var course_id = $(this).attr('data-course-id');
+                        var is_comment = $(this).attr('data-comment');
+
+                        if(!is_comment){
+                            $('.btn-comment').css('display','none');
+                        }else{
+                            $('.btn-comment').css('display','block');
+                        }
+
+                        $('input[name=order_sn]').val(order_sn);
+                        $('input[name=course_id]').val(course_id);
+
                         if(parseFloat($("body").css("width"))>767) {
                             var thisWidth = parseFloat($this.css("width"));
                             var thisLeft = parseFloat($this.offset().left);
@@ -207,6 +225,7 @@
                             }
                         }
                     })
+
                     $("body").on("mouseleave","#class-data",function(){
                         if(parseFloat($("body").css("width"))>767) {
                             $(this).hide();
@@ -221,27 +240,54 @@
                 })
                $("#evaluate-box>div>form>ul>li>div").click(function(e){
                    var $index=Math.ceil((e.pageX-$(this).offset().left)/20);
+                   var type = Number($(this).attr('data-type'));
                    $index=5-$index;
                    $(this).children("div").css("left",-20*$index+"px");
                    var $span=$(this).next();
-                   console.log($index);
+
                    switch ($index){
                        case 4:
                            $span.html("非常不满意");
+                           if(type == 1){
+                                $('input[name=shipping_score]').val((5-Number($index))*10);
+                           }else{
+                                $('input[name=teacher_score]').val((5-Number($index))*10);
+                           }
                            break;
                        case 3:
-                           $span.html("不满意");
+                            $span.html("不满意");
+                            if(type == 1){
+                                $('input[name=shipping_score]').val((5-Number($index))*10);
+                            }else{
+                                console.log(type);
+                                $('input[name=teacher_score]').val((5-Number($index))*10);
+                            }
                            break;
                        case 2:
-                           $span.html("良好");
+                            $span.html("良好");
+                            if(type == 1){
+                                $('input[name=shipping_score]').val((5-Number($index))*10);
+                            }else{
+                                $('input[name=teacher_score]').val((5-Number($index))*10);
+                            }
                            break;
                        case 1:
-                           $span.html("满意");
-                           break;
+                            $span.html("满意");
+                            if(type == 1){
+                                $('input[name=shipping_score]').val((5-Number($index))*10);
+                            }else{
+                                $('input[name=teacher_score]').val((5-Number($index))*10);
+                            }
+                            break;
                        case 0:
-                           $span.html("非常满意");
+                            $span.html("非常满意");
+                            if(type == 1){
+                                $('input[name=shipping_score]').val((5-Number($index))*10);
+                            }else{
+                                $('input[name=teacher_score]').val((5-Number($index))*10);
+                            }
                    }
-               })
+                })
                 $("#evaluate-box>div>span").click(function(){
                     $("#evaluate-box").slideToggle();
                 })
