--- a/appliaction/study/view/index/index/index.html
+++ b/appliaction/study/view/index/index/index.html
@@ -264,7 +264,7 @@
 <script type="text/javascript">
 				TouchSlide({ 
 					slideCell:"#slideBox",
-					titCell:".hd ul", //开启自动分页 autoPage:true ，此时设置 titCell 为导航元素包裹层
+//					titCell:".hd ul", //开启自动分页 autoPage:true ，此时设置 titCell 为导航元素包裹层
 					mainCell:".bd ul", 
 					effect:"leftLoop", 
 					autoPage:false //自动分页
