--- a/public/ststic/study/css/comm.css
+++ b/public/ststic/study/css/comm.css
@@ -158,6 +158,7 @@
 .li_div .tie_li .right_tie .name{ /*line-height:20px;  width:460px; height:29px;*/  float:left;  display:block}
 .li_div .tie_li .right_tie .name .biaoqian{ display:block; line-height:20px; float:left; margin-left:10px; padding:0 10px}
 .li_div .tie_li .right_tie .name span{ display:block; float:left;color:#333; display:block; /*max-width:330px;*/ height:30px; line-height:30px; overflow:hidden}
+.li_div .tie_li .right_tie .name span a{ color:#333333;}
 .li_div .tie_li .right_tie  .zd{ color:#0b6aba; border:#0b6aba 1px solid; border-radius:5px}
 .li_div .tie_li .right_tie  .jh{ color:#e79e37; border:#e79e37 1px solid; border-radius:5px}
 .li_div .tie_li .right_tie .img{margin-right:10px; display:block; float:left; width:25px; height:25px; overflow:hidden; border-radius:100px}
